--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>qml/main.qml</file>
+        <file>qml/Settings.qml</file>
         <file>qml/Entity.qml</file>
         <file>qml/Marquee2.qml</file>
     </qresource>
